--- a/style.css
+++ b/style.css
@@ -43,3 +43,12 @@ footer {
   padding: 15px;
   margin-top: 30px;
 }
+
+.profile-pic {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #60a5fa;
+  margin-bottom: 15px;
+}
