--- a/style.css
+++ b/style.css
@@ -44,11 +44,17 @@ footer {
   margin-top: 30px;
 }
 
+.profile-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 .profile-pic {
-  width: 160px;
-  height: 160px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid #60a5fa;
-  margin-bottom: 15px;
+  border: 3px solid #60a5fa;
 }
+
